[gd_scene load_steps=13 format=3 uid="uid://4ai7r0y6r55j"]

[ext_resource type="Script" uid="uid://cfq7m5apyuvyd" path="res://Level/Game01/game01.gd" id="1_gabea"]
[ext_resource type="Texture2D" uid="uid://d8id0s21dfaa" path="res://Level/Game01/background.png" id="1_r0ouy"]
[ext_resource type="PackedScene" uid="uid://cesdw0yg5hg2r" path="res://Interactables/Bottle/CharcoalBottle.tscn" id="1_werqc"]
[ext_resource type="PackedScene" uid="uid://3h72gsj1b4o4" path="res://Interactables/Bottle/GlassBottle.tscn" id="2_dt0oo"]
[ext_resource type="PackedScene" uid="uid://dbcd2tsqomloe" path="res://Interactables/Bottle/SulphurBottle.tscn" id="2_ga5j0"]
[ext_resource type="Texture2D" uid="uid://dxoowmkvqx5vp" path="res://Level/Game01/table.png" id="2_lvsca"]
[ext_resource type="PackedScene" uid="uid://de4dilpg8wedl" path="res://Interactables/Bottle/SaltpetreBottle.tscn" id="5_5mf18"]
[ext_resource type="Texture2D" uid="uid://cnq0m7vvb6x3k" path="res://GUI/UI/Texture/Keyboard White.png" id="8_8mhyu"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lvnqv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fdbgg"]
atlas = ExtResource("8_8mhyu")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmved"]
atlas = ExtResource("8_8mhyu")
region = Rect2(80, 128, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g14aa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdbgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmved")
}],
"loop": true,
"name": &"E",
"speed": 5.0
}]

[node name="Game01" type="Node2D"]
process_mode = 3
script = ExtResource("1_gabea")

[node name="Background" type="Node2D" parent="."]

[node name="Wall" type="Sprite2D" parent="Background"]
position = Vector2(1240, 710)
scale = Vector2(-2.32447, -2.32447)
texture = ExtResource("1_r0ouy")

[node name="StaticBody2D" type="StaticBody2D" parent="Background"]

[node name="Table" type="Sprite2D" parent="Background/StaticBody2D"]
texture_filter = 1
texture_repeat = 1
position = Vector2(807, 1200)
scale = Vector2(9.73403, 9.73403)
texture = ExtResource("2_lvsca")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D"]
position = Vector2(798, 758)
scale = Vector2(567.31, 2.34419)
shape = SubResource("WorldBoundaryShape2D_lvnqv")

[node name="CharcoalBottle" parent="." instance=ExtResource("1_werqc")]
position = Vector2(422, 424)

[node name="SaltpetreBottle" parent="." instance=ExtResource("5_5mf18")]
position = Vector2(789, 424)

[node name="SulphurBottle" parent="." instance=ExtResource("2_ga5j0")]
position = Vector2(1153, 424)

[node name="GlassBottle" parent="." instance=ExtResource("2_dt0oo")]
position = Vector2(405, 640)

[node name="GlassBottle2" parent="." instance=ExtResource("2_dt0oo")]
position = Vector2(1137, 640)

[node name="GlassBottle3" parent="." instance=ExtResource("2_dt0oo")]
position = Vector2(771, 640)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(768, 192)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_g14aa")
animation = &"E"
autoplay = "E"
frame_progress = 0.457897

[connection signal="item_created" from="CharcoalBottle" to="." method="increment_charcoal_count"]
[connection signal="item_created" from="SaltpetreBottle" to="." method="increment_saltpetre_count"]
[connection signal="item_created" from="SulphurBottle" to="." method="increment_sulphur_count"]
